--- a/OllamaCodeAssistant/OllamaCodeAssistant.csproj
+++ b/OllamaCodeAssistant/OllamaCodeAssistant.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ChatToolWindowControl.xaml.cs">
       <DependentUpon>ChatToolWindowControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CodeAnalysisManager.cs" />
     <Compile Include="DETService.cs" />
     <Compile Include="ExecuteExplainErrorCommand.cs" />
     <Compile Include="LLMInteractionManager.cs" />
@@ -96,8 +97,14 @@
     <PackageReference Include="Microsoft.Build.Locator">
       <Version>1.9.1</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces">
+      <Version>4.14.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.AI.Ollama">
       <Version>9.5.0-preview.1.25262.9</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.LanguageServices">
+      <Version>4.14.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.14.40270" ExcludeAssets="runtime" NoWarn="NU1604">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
